title alignment fix

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -492,6 +492,7 @@ path {
   font-size: 36px;
   font-family: "oswald";
   font-style: normal;
+  margin-left: 8px;
 }
 
 #top-right-btn a {
